# CYBERHIMOYA

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml
apps/: V1-NOTES.md
apps/android/: README.md  settings.gradle.kts
apps/api/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
apps/api/app/: __init__.py  config.py  cors_util.py  http_status.py  main.py  middleware_security.py
apps/api/app/data/breaches/: seed.json
apps/api/app/data/feeds/: 20260710.1.json  20260710.1.sig  20260710.2.json  20260710.2.sig
apps/api/app/data/keys/: README.md  feed_ed25519_private.dev.b64  feed_ed25519_public.b64
apps/api/app/models/: schemas.py
apps/api/app/routers/: audit.py  auth.py  behavior.py  breach.py  consents.py  deepfake.py  devices.py  dns.py  emergency.py  feed.py  messages.py  notifications.py  ops.py  password_health.py  reports.py  scan.py  scans.py  sigma.py  threat_events.py
apps/api/app/services/: auth.py  behavior.py  breach.py  deepfake.py  dns_check.py  emergency.py  feed.py  feed_crypto.py  hunting.py  message_scoring.py  notifications.py  password_health.py  pg_store.py  rate_limit.py  reports.py  scoring.py  sigma_rules.py  store.py  store_models.py  threat_events.py
apps/api/docs/: emergency.md
apps/api/tests/: conftest.py  test_api.py
apps/extension/: README.md  analyzer.js  key.pem  (+7 more)
docs/: privacy-policy-draft.md  terms-draft.md
scripts/: defensive-lint.sh  generate_feed.py  generate_feed_keys.py  smoke_v1.py  validate_extension.sh
(+89 files in other folders)
